--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,12 @@
     <version>1.0-SNAPSHOT</version>
     <name>Cahelek</name>
     <url>http://maven.apache.org</url>
+    <properties>
+        <!-- https://maven.apache.org/general.html#encoding-warning -->
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
