remove codecov from travis for now

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,5 +14,5 @@ script:
     - mvn clean verify
     - mvn test
     
-after_success:
-  - bash <(curl -s https://codecov.io/bash)
+#after_success:
+  #- bash <(curl -s https://codecov.io/bash)
